# x402

./: .gitbook.yaml  .gitignore  ANYSPEND-INTEGRATION.md  BSC_SUPPORT.md  CONTRIBUTING.md  DEFAULT_ASSETS.md  DEFERRED_ARCHITECTURE.md  DEFERRED_ARCHITECTURE_V2.md  DOGFOODING.md  FIX_PROPOSAL.md  PROJECT-IDEAS.md  README.md  ROADMAP.md  SECURITY.md  TSC.md  UPDATE_SUMMARY.md  docs.json  facilitator_fee_issue.md  fix-facilitator-redirect.patch  issue-1645-analysis.md  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-body-middleware.md  pr-body.md  pr_body.md  test-facilitator-redirect.js  test-fetch-redirect.js  test-middleware-init.js  turbo.json
examples/proxy-signer/python-client/: main.py  pyproject.toml
examples/python/clients/advanced/: .env-local  README.md  all_networks.py  builder_pattern.py  custom_transport.py  error_recovery.py  hooks.py  index.py  preferred_network.py  pyproject.toml
examples/python/clients/error-handling/: .env-example  README.md  main.py  pyproject.toml
examples/python/clients/solana/: README.md  main.py  pyproject.toml
examples/python/servers/flask/: README.md  main.py  pyproject.toml  test_client.py
examples/python/servers/solana/: README.md  main.py  main_no_facilitator.py  pyproject.toml
python/x402/: CHANGELOG.md  README.md  __init__.py  client.py  client_base.py  facilitator.py  facilitator_base.py  interfaces.py  pyproject.toml  run_e2e_test.sh  server.py  server_base.py  x402Client.md  x402Facilitator.md  x402ResourceServer.md
python/x402/changelog.d/: +bazaar-resource-service-metadata.feature.md  1048.feature.md  1111.bugfix.md  1120.bugfix.md  1121.bugfix.md  1131.feature.md  1176.bugfix.md  1177.feature.md  1183.bugfix.md  120.feature.md  1265.bugfix.md  127.misc  128.doc.md  139.doc.md  1474.feature.md  1550.bugfix.md  1584.bugfix.md  1677.bugfix.md  1682.feature.md  1846.bugfix.md  1846.feature.md  2087.feature.md  2160.feature.md  2161.feature.md  545.bugfix.md  574.bugfix.md  68.misc.md  689.feature.md  add-eip3009-utils-unit-tests.doc.md  add-hpp-chains-default-stablecoin.feature.md  adi-chain.feature.md  erc20-approval-default-gas-fees.misc.md  evm-nanopayment-decimal-precision.bugfix.md  facilitator-extension-objects.feature.md  facilitator-web3-signer-method-tests.doc.md  fix-facilitator-context-isolation.feature.md  interfaces-test-coverage.testing.md  megaeth-support.feature.md  multicall-unit-tests.doc.md  polygon-usage-examples.feature.md  (+12 more)
python/x402/extensions/: README.md  __init__.py
python/x402/extensions/bazaar/: __init__.py  facilitator.py  facilitator_client.py  resource_service.py  server.py  types.py
python/x402/extensions/eip2612_gas_sponsoring/: facilitator.py  server.py
python/x402/extensions/erc20_approval_gas_sponsoring/: client.py  facilitator.py  types.py
python/x402/extensions/payment_identifier/: __init__.py  server.py  validation.py
python/x402/http/: HTTPFacilitatorClient.md  __init__.py  constants.py  facilitator_client.py  facilitator_client_base.py  types.py  utils.py  x402HTTPClient.md  x402HTTPResourceServer.md  x402_http_client.py  x402_http_server.py  x402_http_server_base.py
python/x402/http/clients/: __init__.py  httpx.py  requests.py
python/x402/http/middleware/: fastapi.py  flask.py
python/x402/http/paywall/: __init__.py  avm_paywall_template.py  evm_paywall_template.py  svm_paywall_template.py
python/x402/mcp/: CHANGELOG.md  README.md  __init__.py  client.py  client_async.py  server.py  server_async.py  server_sync.py  types.py  utils.py
python/x402/mcp/tests/: __init__.py  conftest.py  test_client.py  test_client_async.py  test_server.py  test_server_async.py  test_server_sync.py  test_utils.py
python/x402/mechanisms/evm/: __init__.py  constants.py  eip712.py  erc4337_constants.py  erc4337_networks.py  erc4337_types.py  erc6492.py  signer.py  signers.py  types.py  utils.py  verify.py
python/x402/mechanisms/hypercore/: README.md  __init__.py  constants.py
python/x402/mechanisms/svm/: __init__.py  constants.py  normalizer.py  settlement_cache.py  signer.py  signers.py  swig.py  utils.py
python/x402/mechanisms/tvm/: __init__.py  boc.py  constants.py  signer.py  signers.py  types.py  utils.py  verify.py
python/x402/schemas/: __init__.py  base.py  config.py  errors.py  extensions.py  helpers.py  hooks.py  payments.py  responses.py  v1.py  views.py
python/x402/src/x402/: __init__.py  chains.py  common.py  encoding.py  evm_paywall_template.py  exact.py  exact_svm.py  facilitator.py  networks.py  paywall.py  svm_paywall_template.py  template.py  types.py  wallet_policy_utils.py
python/x402/tests/: __init__.py  conftest.py  test_common.py  test_encoding.py  test_exact.py  test_interfaces.py  test_path.py  test_paywall.py  test_polygon_amoy.py  test_svm.py  test_svm_e2e.py  test_types.py  test_wallet_policy_utils.py
python/x402/tests/client/: test_x402_client.py
python/x402/tests/clients/: test_base.py  test_httpx.py  test_requests.py  (+1 more)
rust/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PROXY_README.md  README.md  README_TEMPLATE.md  RULES.md  RUST_ADVANTAGES.md  TESTING.md  rustfmt.toml
rust/.cursor/rules/: rust-standards.mdc  template-guidelines.mdc  x402-rules.mdc
rust/examples/: actix_server.rs  axum_server.rs  client.rs  facilitator.rs  facilitator_discovery.rs  mainnet_server.rs  middleware_demo.rs  proxy_server.rs  real_implementation_demo.rs  real_wallet_integration.rs  rust_features_demo.rs  template_demo.rs  warp_server.rs
rust/src/: actix_web.rs  axum.rs  blockchain.rs  client.rs  crypto.rs  error.rs  facilitator.rs  lib.rs  middleware.rs  proxy.rs  real_facilitator.rs  types.rs  wallet.rs  warp.rs
rust/src/template/: config.rs  mod.rs  paywall.html  paywall.rs
rust/tests/: error_handling_tests.rs  integration_tests.rs  performance_tests.rs  real_implementation_tests.rs
rust/x402/: Cargo.toml  README.md
rust/x402/src/: auth.rs  client.rs  errors.rs  lib.rs  server.rs  types.rs
rust/x402/tests/: coinbase_facilitator_test.rs  common.rs  integration_tests.rs  x402_facilitator_test.rs
(+2741 files in other folders)
