[project]
name = "x402"
version = "0.1.0"
description = "x402 Payment Protocol SDK for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Coinbase" }]
keywords = ["x402", "payment", "protocol", "http", "402"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "typing_extensions>=4.0.0",
    # EVM dependencies (like legacy package)
    "eth-abi>=5.0.0",
    "eth-keys>=0.5.0",
    "eth-utils>=4.0.0",
    "eth-account>=0.12.0",
    "web3>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/coinbase/x402"
Documentation = "https://x402.org"
Repository = "https://github.com/coinbase/x402"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "**/*.py",
    "py.typed",
]
exclude = [
    "tests/",
    "**/__pycache__/",
]

[tool.hatch.build.targets.wheel]
# Force inclusion with package name remapping
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "x402/__init__.py"
"client.py" = "x402/client.py"
"server.py" = "x402/server.py"
"facilitator.py" = "x402/facilitator.py"
"interfaces.py" = "x402/interfaces.py"
"py.typed" = "x402/py.typed"
"schemas" = "x402/schemas"
"http" = "x402/http"
"mechanisms" = "x402/mechanisms"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["x402"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

