[package]
name = "x402"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
base64 = "0.22.1"
reqwest = { version = "0.12.27", features = ["json"] }

# Optional Dependecies
axum = { version = "^0.8.8", optional = true }
tokio = "1.48.0"


[features]
default=["axum"]
axum  = ["dep:axum"]
