[package]
name = "x402"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
base64 = "0.22.1"
reqwest = { version = "0.12.27", features = ["json"] }
tokio = "1.48.0"
thiserror = "2.0.17"

# Optional Dependecies
axum = { version = "^0.8.8", optional = true }
alloy = { version = "0.1", optional = true, features = ["signers", "signer-local", "sol-types", "eip712"] }
hex = "0.4.3"
tower = "0.5.2"

[dev-dependencies]
wiremock = "0.6.5"


[features]
default=["axum","evm"]
axum  = ["dep:axum"]
evm = ["dep:alloy"]
