[package]
name = "x402"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
base64 = "0.22.1"
reqwest = { version = "0.12.27", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
cdp-sdk = { git = "https://github.com/coinbase/cdp-sdk"}

# Optional Dependecies
axum = { version = "^0.8.8", optional = true }
alloy = { version = "0.1.4", optional = true, features = ["signers", "signer-local", "sol-types", "eip712"] }
hex = "0.4.3"
tower = "0.5.2"
bon = "3.8.1"
jsonwebtoken = "9.3.1"
reqwest-middleware = "0.4.2"
sha2 = "0.10.9"
uuid = { version = "1.19.0", features = ["v4"] }
urlencoding = "2.1.3"
async-trait = "0.1.89"
http = "1.4.0"
chrono = "0.4.42"
rand = "0.9.2"

[dev-dependencies]
wiremock = "0.6.5"

[features]
default=["axum","evm"]
axum  = ["dep:axum"]
evm = ["dep:alloy"]
