[project]
name = "x402-proxy-signer-python-client"
version = "0.1.0"
description = "Example: x402 client using a remote Java proxy signer"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "x402[requests,evm,svm]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../python/x402", editable = true }
