[project]
name = "x402-advanced-examples"
version = "0.1.0"
description = "Advanced x402 client examples demonstrating hooks, custom selectors, and error recovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "x402",
    "eth-account>=0.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
