[project]
name = "x402-error-handling-example"
version = "0.1.0"
description = "Comprehensive error handling patterns for x402 Python applications"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "x402[httpx,evm,svm]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }