[project]
name = "x402-solana-server-example"
version = "0.1.0"
description = "Example x402 FastAPI server for Solana payments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
    "x402>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

