[project]
name = "x402-httpx-client-example"
version = "0.1.0"
description = "Example of using httpx client with x402 payment handling (V2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "eth-account>=0.8.0",
    "python-dotenv>=1.0.0",
    "x402"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../../python/x402", editable = true }
